# Rocket-League-Steal-N-Cook

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
cfg/: StealAndCook.set
include/: StealAndCook.h
src/: StealAndCook.cpp  pch.h
